--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="email_hint">Электронная почта</string>
     <string name="password_hint">Пароль</string>
     <string name="sign_in">Войти</string>
+    <string name="auth">Авторизация</string>
+    <string name="sign_up">Создать</string>
 </resources>
